feat: support cluster management
