# pkg/apiserver/controller/control.go
@@ -1,4 +1,17 @@
-// Copyright 2017 EasyStack, Inc.
+// Copyright 2022 Linkall Inc.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
 package controller
 
 import (
@@ -37,6 +50,8 @@ func addKnownTypes(scheme *runtime.Scheme) error {
 		&vanusv1alpha1.TimerList{},
 		&vanusv1alpha1.Gateway{},
 		&vanusv1alpha1.GatewayList{},
+		&vanusv1alpha1.Connector{},
+		&vanusv1alpha1.ConnectorList{},
 	)
 
 	metav1.AddToGroupVersion(scheme, SchemeGroupVersion)
